Added temperature calls and hotend control
