# OctoprintOpenApi/generated/OpenAPIClient/Classes/OpenAPIs/Models/PrintToolCommand.swift
@@ -1,0 +1,13 @@
+//
+// PrintToolCommand.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+
+public enum PrintToolCommand: String, Codable, CaseIterable {
+    case target = "target"
+}
