# OctoprintOpenApi/generated/OpenAPIClient/Classes/OpenAPIs/Models/PrintToolValues.swift
@@ -1,0 +1,22 @@
+//
+// PrintToolValues.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+
+public struct PrintToolValues: Codable { 
+
+
+    public var tool0: Double?
+    public var tool1: Double?
+
+    public init(tool0: Double? = nil, tool1: Double? = nil) {
+        self.tool0 = tool0
+        self.tool1 = tool1
+    }
+
+}
